--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,38 @@
 				<tr><td>Start:</td><td><input type="text" id="startFreq"></td><td>MHz</td></tr>
 				<tr><td>End:</td><td><input type="text" id="endFreq"></td><td>MHz</td></tr>
 				<tr><td>Step:</td><td><input type="text" id="numSteps"></td><td></td></tr>
+				<tr>
+					<td>Rx gain:</td>
+					<td>
+						<select id="rxGain">
+							<option value="-10">-10</option>
+							<option value="0">0</option>
+							<option value="10">10</option>
+							<option value="20">20</option>
+							<option value="30">30</option>
+							<option value="40">40</option>
+							<option value="50">50</option>
+							<option value="60">60</option>
+						</select>
+					</td>
+					<td>dB</td>
+				</tr>
+				<tr>
+					<td>Tx gain:</td>
+					<td>
+						<select id="txGain">
+							<option value="-10">-10</option>
+							<option value="0">0</option>
+							<option value="10">10</option>
+							<option value="20">20</option>
+							<option value="30">30</option>
+							<option value="40">40</option>
+							<option value="50">50</option>
+							<option value="60">60</option>
+						</select>
+					</td>
+					<td>dB</td>
+				</tr>
 			</table>
 			<input type="button" id="runBtn" onclick="btnClick(this)" value="Run"/>
 
@@ -45,7 +77,6 @@
 				</tr>
 				<tr><td>Cutoff:</td><td><input type="text" id="cutoffRange" value="3" onchange="setCursorMode()"></td><td>dB</td></tr>
 				<tr><td colspan="2">Display cutoff:</td><td><input type="checkbox" id="showCutoff" value="1" onchange="setCursorMode()"></td></tr>
-				</tr>
 			</table>
 
 			<p>Graph</p>
